--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <input type="text" id="cliente" name="company_name" placeholder="Nome da empresa">
 </div>
 <div>
-    <label for="nomeCliente">Nome do Cliente:</label>
+    <label for="nomeCliente">Contato do Cliente:</label>
     <input type="text" id="nomeCliente" name="name" placeholder="Nome do cliente">
 </div>
             <div>
