--- a/index.html
+++ b/index.html
@@ -73,6 +73,28 @@
             .modal-content { padding: 12px; }
             .items-table th, .items-table td { padding: 8px 4px; }
             .section-title { font-size: 17px; }
+@media (max-width: 768px) {
+    .items-section {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+    .items-table {
+        min-width: 700px;
+        width: 100%;
+        font-size: 14px;
+    }
+}
+@media (max-width: 480px) {
+    .items-section {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+    .items-table {
+        min-width: 700px;
+        width: 100%;
+        font-size: 13px;
+    }
+}
 
     </style>
 </head>
